--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -15,28 +15,43 @@
 
       <div class="header__item">
         <div class="header__social-links social-links">
-          <a class="social-links__link" href="">Контакты</a>
           <a class="social-links__link" href="">
             <div class="social-links__image">
               <img 
-                src="/assets/icons/facebook.svg" 
-                alt="facebook"
+                src="/assets/icons/viber.png" 
+                alt="viber"
               >
             </div>
           </a>
           <a class="social-links__link" href="">
             <div class="social-links__image">
               <img 
-                src="/assets/icons/ok.svg" 
-                alt="ok"
+                src="/assets/icons/tiktok.png" 
+                alt="tiktok"
               >
             </div>
           </a>
           <a class="social-links__link" href="">
-            <div class="social-links__image">
+            <div class="social-links__image social-links__image--tight">
               <img 
-                src="/assets/icons/instagram.svg" 
+                src="/assets/icons/instagram.png" 
                 alt="instagram"
+              >
+            </div>
+          </a>
+          <a class="social-links__link" href="">
+            <div class="social-links__image social-links__image--tight">
+              <img 
+                src="/assets/icons/telegram.png" 
+                alt="telegram"
+              >
+            </div>
+          </a>
+          <a class="social-links__link" href="">
+            <div class="social-links__image social-links__image--tight">
+              <img 
+                src="/assets/icons/youtube.png" 
+                alt="youtube"
               >
             </div>
           </a>
