--- a/src/app/components/confections/confection-detail/confection-detail.component.html
+++ b/src/app/components/confections/confection-detail/confection-detail.component.html
@@ -28,6 +28,7 @@
           <input 
             type="number" 
             [(ngModel)]="confectionCount"
+            [min]="confection.minimumOrderCount"
             name="quantity-counter"
           >
         </div>
