--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -30,13 +30,17 @@
 .social-links {
     &__image{
         width: 35px;
-        height: 35px;
+        height: 22px;
         padding: 0 5px;
 
         img {
             width: 100%;
             height: 100%;
-            object-fit: fill;
+            object-fit: contain;
+        }
+
+        &--tight {
+            padding: 0 6px;
         }
     }
 }
