--- a/src/app/components/confections/confection-detail/confection-detail.component.scss
+++ b/src/app/components/confections/confection-detail/confection-detail.component.scss
@@ -55,6 +55,13 @@
         margin-bottom: 1.07em;
     }
 
+    &__limitaion-lable {
+        font-size: .95rem;
+        font-weight: 200;
+        color: $dark-red;
+        margin: 0 0 0.5em 0;
+    }
+
     &__price {
         font-size: 2.5rem;
         font-weight: 600;
