fix total line calculation

--- a/src/app/components/confections/order-confection/order-confection.component.html
+++ b/src/app/components/confections/order-confection/order-confection.component.html
@@ -9,21 +9,21 @@
     <div class="order-preview__body">
       <div class="order-preview__sublines">
         <div class="order-preview__title">
-          <span>{{confection.name}}</span>
+          <span>{{ confection.name }}</span>
         </div>
         <div class="order-preview__count">
           <span class="order-preview__lable">Кол-во: </span> 
-          <span>{{quantityOrder}} шт.</span> 
+          <span>{{ quantityOrder }} шт.</span> 
         </div>
         <div class="order-preview__price">
           <span class="order-preview__lable">Цена: </span>
-          <span>{{confection.price}} р.</span>
+          <span>{{ confection.price }} р.</span>
         </div>
       </div>
       
       <div class="order-preview__total-line">
         <span class="order-preview__lable">К оплате: </span>
-        <span>{{confection.price * quantityOrder}} р.</span>
+        <span>{{ totalLine }} р.</span>
       </div>
     </div>
   </div>
