add confection mappings resolver

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,6 @@
     <router-outlet></router-outlet>
 </div>
 
+<app-progress-spinner *ngIf="isLoading"></app-progress-spinner>
+
 <!-- <app-footer></app-footer> -->
