--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="menu__row">
       <a class="menu__icon icon" routerLink="/catalog">
-        <img class="icon__img" [src]="companyLogo" alt="logo">
+        <img class="icon__img" src="../../../assets/images/logo_4.jpg" alt="logo">
       </a>
 
       <div 
