use real data, update image model and logic

--- a/src/app/components/confections/confection-card/confection-card.component.html
+++ b/src/app/components/confections/confection-card/confection-card.component.html
@@ -1,7 +1,7 @@
 <div class="confection-card"> 
   <div class="confection-card__image">
     <a (click)="openProductDetail()">
-      <img [src]="confection.imageUrl" [alt]="confection.name"> 
+      <img [src]="confection.pictureUrl" [alt]="confection.name"> 
     </a>
   </div>
 
