--- a/src/app/components/confections/order-confection/order-confection.component.html
+++ b/src/app/components/confections/order-confection/order-confection.component.html
@@ -4,7 +4,7 @@
 >
   <div class="order-preview__row">
     <div class="order-preview__image">
-      <img [src]="confection.imageUrl" alt="preview image">
+      <img [src]="confection.pictureUrl" alt="preview image">
     </div>
     <div class="order-preview__body">
       <div class="order-preview__sublines">
