--- a/src/app/components/confections/confection-detail/confection-detail.component.html
+++ b/src/app/components/confections/confection-detail/confection-detail.component.html
@@ -5,6 +5,7 @@
   <div class="confection-detail__row">
     <div class="confection-detail__image">
       <img *ngIf="confection.pictureUrl as picture; else noPictureFound"
+        referrerPolicy="no-referrer"
         [src]="picture" 
         alt="Картинка продукта">
         
