--- a/src/app/components/confections/order-confection/order-confection.component.html
+++ b/src/app/components/confections/order-confection/order-confection.component.html
@@ -4,7 +4,14 @@
 >
   <div class="order-preview__row">
     <div class="order-preview__image">
-      <img [src]="confection.pictureUrl" alt="preview image">
+      <img
+        *ngIf="confection.pictures[0] as picture; else noPictureFound" 
+        [src]="picture.url" 
+        [alt]="confection.name"
+      >
+      <ng-template #noPictureFound>
+        <img src="/assets/images/no_image_available.png" alt="Нет картинки">
+      </ng-template>
     </div>
     <div class="order-preview__body">
       <div class="order-preview__sublines">
