add ordering logic

--- a/src/app/components/confections/confection-detail/confection-detail.component.html
+++ b/src/app/components/confections/confection-detail/confection-detail.component.html
@@ -91,7 +91,7 @@
 
 <app-popup *ngIf="isDisplayModal" title="Заказать продукт">
   <app-order-confection 
-    [productId]="confectionId" 
+    [confectionId]="confectionId" 
     [quantityOrder]="confectionCount"
   ></app-order-confection>
 </app-popup>
