add information module

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,14 +3,14 @@
     <div class="header__row">
       <div class="header__item">
         <div class="header__menu-links menu-links">
-          <a href="">О нас</a> |
-          <a href="">Доставка</a> |
-          <a href="">Оплата</a>
+          <a class="" routerLink="/info/about">О нас</a> |
+          <a class="" routerLink="/info/delivery">Доставка</a> |
+          <a class="" routerLink="/info/payment">Оплата</a>
         </div>
       </div>
 
       <div class="header__item">
-        <a href="">Вакансии в пекарне «Крама Алёны»</a>
+        <a href="">«Сладкому подарку повод не нужен»</a>
       </div>
 
       <div class="header__item">
