add markup and styles for information module

--- a/src/app/components/confections/confection-detail/confection-detail.component.html
+++ b/src/app/components/confections/confection-detail/confection-detail.component.html
@@ -22,7 +22,7 @@
             <a class="nav-tab__link">Описание</a>
           </li>
         </ul>
-        <div class="confection-detail__description">
+        <div class="confection-detail__description text">
           <p>{{ confection.description }}</p>
         </div>
       </div>
