--- a/src/app/components/information/delivery/delivery.component.html
+++ b/src/app/components/information/delivery/delivery.component.html
@@ -1,10 +1,23 @@
 <div class="delivery">
-  <h2 class="delivery__title">Доставка</h2>
   <div class="delivery__content">
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsam cumque suscipit,
-      voluptatem repellendus maxime! Corporis eligendi mollitia obcaecati a quisquam ipsum doloremque 
-      exercitationem! Aut tempora provident cum beatae architecto.
-    </p>
-  </div>
+    <h2 class="delivery__title title-underlined">Доставка</h2>
+    <div class="delivery__text text">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa illum quis deserunt corrupti sit quas alias id totam odit, 
+        omnis, excepturi accusantium repellat ex! Nam minus cumque iste magnam expedita quis nesciunt inventore exercitationem 
+        vero ducimus! Nobis minus tempore tempora similique magnam provident numquam quasi quo dolorum animi repudiandae aliquam, 
+        vitae voluptatum, libero architecto hic inventore iste magni enim aut nam nisi harum reprehenderit sed? Necessitatibus
+          natus fugit in distinctio adipisci quos incidunt ipsa dolor!
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore corporis omnis ea rerum. Distinctio ab necessitatibus 
+        iusto illum corporis ullam doloremque accusantium, eos molestias rerum harum optio officiis ad aliquam!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias animi voluptatem neque reiciendis corporis ipsa 
+        repellat eos omnis exercitationem odit facilis similique sit voluptatum repudiandae nihil distinctio pariatur dignissimos 
+        magni, a corrupti ullam quae. Nostrum excepturi, cupiditate autem fuga eius sequi, consequuntur iusto 
+        quod nulla consequatur fugit, quibusdam ratione facilis aut voluptates maxime.
+      </p>
+    </div>
 </div>
