--- a/src/app/components/information/payment/payment.component.html
+++ b/src/app/components/information/payment/payment.component.html
@@ -1,10 +1,18 @@
 <div class="payment">
-  <h2 class="payment__title">Оплата</h2>
   <div class="payment__content">
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsam cumque suscipit,
-      voluptatem repellendus maxime! Corporis eligendi mollitia obcaecati a quisquam ipsum doloremque 
-      exercitationem! Aut tempora provident cum beatae architecto.
-    </p>
+    <h2 class="payment__title title-underlined">Оплата</h2>
+    <div class="payment__text text">
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsam cumque suscipit,
+        voluptatem repellendus maxime! Corporis eligendi mollitia obcaecati a quisquam ipsum doloremque 
+        exercitationem! Aut tempora provident cum beatae architecto.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione placeat deserunt incidunt 
+        libero sapiente culpa voluptatum voluptas autem nostrum neque quibusdam labore, alias eligendi laudantium, 
+        odit minus! Mollitia, sunt perspiciatis! Similique debitis at vero facilis ratione, sapiente tempora cupiditate
+        deleniti velit consequuntur suscipit harum maiores reiciendis laudantium recusandae, sunt impedit.
+      </p>
+    </div>
   </div>
 </div>
