--- a/src/app/components/information/about/about.component.html
+++ b/src/app/components/information/about/about.component.html
@@ -1,10 +1,12 @@
 <div class="about">
-  <h2 class="about__title">Обо мне</h2>
   <div class="about__content">
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsam cumque suscipit,
-      voluptatem repellendus maxime! Corporis eligendi mollitia obcaecati a quisquam ipsum doloremque 
-      exercitationem! Aut tempora provident cum beatae architecto.
-    </p>
+    <h2 class="about__title title-underlined">Обо мне</h2>
+    <div class="about__text text">
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam ipsam cumque suscipit,
+        voluptatem repellendus maxime! Corporis eligendi mollitia obcaecati a quisquam ipsum doloremque 
+        exercitationem! Aut tempora provident cum beatae architecto.
+      </p>
+    </div>
   </div>
 </div>
