get rid of templace and replace it with default css class

--- a/src/app/components/confections/confection-card/confection-card.component.html
+++ b/src/app/components/confections/confection-card/confection-card.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <button 
-      class="card-details__order-button"
+      class="card-details__order-button btn"
       (click)="openProductDetail()"
     >ЗАКАЗАТЬ</button>
   </div>
