--- a/src/app/components/confections/confection-card/confection-card.component.scss
+++ b/src/app/components/confections/confection-card/confection-card.component.scss
@@ -50,9 +50,7 @@
     align-items: center;
     justify-content: space-between;
 
-    &__order-button { 
-        @extend %deault-button;
-    }
+    &__order-button { }
 }
 
 .price-section {
