--- a/src/app/components/confections/confection-detail/confection-detail.component.html
+++ b/src/app/components/confections/confection-detail/confection-detail.component.html
@@ -51,7 +51,7 @@
         </div>
         <button 
           type="button" 
-          class="confection-detail__order-button"
+          class="confection-detail__order-button btn"
           (click)="orderConfection()"
         >ЗАКАЗАТЬ ТОВАР</button>
       </form>
