--- a/src/app/scss/components/_buttons.scss
+++ b/src/app/scss/components/_buttons.scss
@@ -1,6 +1,6 @@
 @import '../abstracts/variables';
 
-%deault-button {
+.btn {
     padding: 0.75rem 1.15rem;
     font-size: .85rem;
     cursor: pointer;
