configure mapping and enums

--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -41,7 +41,7 @@
           <li>
             <a 
               class="menu__link"
-              (click)="navigateTo('#')"
+              (click)="navigateTo('/catalog', 'marshmallow')"
             >Зефир</a>
           </li>
           <li>
