--- a/src/app/shared/components/no-product-found/no-product-found.component.scss
+++ b/src/app/shared/components/no-product-found/no-product-found.component.scss
@@ -1,6 +1,8 @@
 .no-product-found { 
-    width: 50%;
-    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     padding: 1.15rem;
     opacity: 85%;
 }
