--- a/src/app/scss/base/_base.scss
+++ b/src/app/scss/base/_base.scss
@@ -45,18 +45,28 @@ p {
     font-size: 2.5rem;
     line-height: 1.125;
     text-align: center;
+    position: relative;
+    padding: 0px 0px 15px 0px;
 
     &::after {
         content: '';
-        display: block;
-        width: 100px;
-        height: 3px;
+        position: absolute;
+        width: 75px;
+        bottom: 0;
+        height: 2px;
+        left: 50%;
         background-color: $light-orange;
-        margin: 15px auto;
+        margin: 0px 0px 0px -37.25px;
     }
 }
 
 .text {
     font-size: 1.10rem; // 17,6
     line-height: 1.5;
+}
+
+.error-message {
+    color: red;
+    font-weight: 100;
+    padding: 0.25rem;
 }
