--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -1,5 +1,22 @@
 <div class="order-list">
   <div class="order-list__container _container">
-    
+    <h1 class="order-list__title title">Заказы</h1>
+
+    <div class="order-list__tab-menu tab-menu">
+      <ul class="tab-menu__list">
+        <li class="tab-menu__item"><a href="" class="tab-menu__link">В обработке</a></li>
+        <li class="tab-menu__item"><a href="" class="tab-menu__link tab-menu__link--active">Все Заказы</a></li>
+        <li class="tab-menu__item"><a href="" class="tab-menu__link">Завершённые</a></li>
+      </ul>
+    </div>
+
+    <div class="order-list__toolbar toolbar">
+      <input placeholder="Поиск по Идентификатору, Email, Продукту и другому" class="toolbar__search"/>
+      <div class="toolbar__controls">
+        <button class="toolbar__btn btn">Фильтр</button>
+        <button class="toolbar__btn btn">Прикрепить</button>
+        <button class="toolbar__btn btn">Экспорт</button>
+      </div>
+    </div>
   </div>
 </div>
