--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -3,11 +3,13 @@
     <h1 class="order-list__title title">Заказы</h1>
 
     <div class="order-list__tab-menu tab-menu">
-      <ul class="tab-menu__list">
-        <li class="tab-menu__item"><a href="" class="tab-menu__link">В обработке</a></li>
-        <li class="tab-menu__item"><a href="" class="tab-menu__link tab-menu__link--active">Все Заказы</a></li>
-        <li class="tab-menu__item"><a href="" class="tab-menu__link">Завершённые</a></li>
-      </ul>
+      <div class="tab-menu__content">
+        <ul class="tab-menu__list">
+          <li class="tab-menu__item"><a href="" class="tab-menu__link">В обработке</a></li>
+          <li class="tab-menu__item"><a href="" class="tab-menu__link tab-menu__link--active">Все Заказы</a></li>
+          <li class="tab-menu__item"><a href="" class="tab-menu__link">Завершённые</a></li>
+        </ul>
+      </div>
     </div>
 
     <div class="order-list__toolbar toolbar">
