add icons for buttons and inputs

--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -13,11 +13,22 @@
     </div>
 
     <div class="order-list__toolbar toolbar">
-      <input placeholder="Поиск по Идентификатору, Email, Продукту и другому" class="toolbar__search"/>
-      <div class="toolbar__controls">
-        <button class="toolbar__btn btn">Фильтр</button>
-        <button class="toolbar__btn btn">Прикрепить</button>
-        <button class="toolbar__btn btn">Экспорт</button>
+      <div class="toolbar__row">
+        <input placeholder="Поиск по Идентификатору, Email, Продукту и другому" class="toolbar__search"/>
+        <div class="toolbar__controls">
+          <button class="toolbar__btn btn">
+            <img class="toolbar__btn-icon" src="../../../../assets/icons/filter.png"/>
+            Фильтр
+          </button>
+          <button class="toolbar__btn btn">
+            <img class="toolbar__btn-icon" src="../../../../assets/icons/attachment.png"/>
+            Прикрепить
+          </button>
+          <button class="toolbar__btn btn">
+            <img class="toolbar__btn-icon" src="../../../../assets/icons/export.png"/>
+            Экспорт
+          </button>
+        </div>
       </div>
     </div>
   </div>
