add pagination markup

--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -102,5 +102,25 @@
         </tr>
       </tbody>
     </table>
+
+    <div class="order-list__pagination">
+      <div class="pagination__items">
+        <div class="pagination__item">
+          <button class="pagination__btn pagination__btn--arrow-left"></button>
+        </div>
+        <div class="pagination__item">
+          <button class="pagination__btn pagination__btn--number">{{ paginationStartNumber }}</button>
+        </div>
+        <div class="pagination__item">
+          <button class="pagination__btn pagination__btn--more">...</button>
+        </div>
+        <div class="pagination__item">
+          <button class="pagination__btn pagination__btn--number"> {{ paginationEndNumber }} </button>
+        </div>
+        <div class="pagination__item">
+          <button class="pagination__btn pagination__btn--arrow-right"></button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
